# NexGen

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  TASKS.md  docker-compose.yml  master.md  query.md  rag.md
core/: CMakeLists.txt  README.md  c_cpp_properties.json  memory_store_queries.sql
core/src/: context_builder.cc  context_builder.hh  harness_llm.cc  harness_llm.hh  logger.hh  memory_store.cc  memory_store.hh  test_context_builder.cc  test_gpu.cc  test_harness_llm.cc  test_memory_store.cc  test_sqlite.cc
master/: .env.example  Dockerfile  README.md  app.py  pyproject.toml  test_llm.py
master/config/: topology.json
master/src/: context.py  executor.py  intent.py  main.py  orchestrator.py  planner.py  reasoner.py  session.py  settings.py  synthesiser.py  validator.py
master/src/mock_query/: executor.py  few_shot.py  formatter.py  generator.py  pii.py  pipeline.py  repair.py  schema_linker.py  validator.py
master/src/mock_rag/: authority.py  compactor.py  conflict.py  debate.py  dense.py  fusion.py  id_preservation.py  pipeline.py  reranker.py  sparse.py  temporal.py
master/src/prompts/: intent.txt  reasoner.txt  synthesiser.txt  validator.txt
master/tests/integration/: test_health.py
master/tests/unit/: test_context.py  test_executor.py  test_intent.py  test_planner.py  test_reasoner.py  test_session.py  test_synthesiser.py  test_validator.py
nexgen_shared/: pyproject.toml
nexgen_shared/nexgen_shared/: __init__.py  errors.py  logging.py  schemas.py  tracing.py
nexgen_shared/nexgen_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nexgen_shared/tests/: test_errors.py  test_logging.py  test_schemas.py  test_tracing.py
query/: README.md  pyproject.toml
query/data/: eval_set.jsonl  fallback_examples.jsonl
query/prompts/: generator.txt
query/scripts/: init_qdrant.py  seed_few_shot.py
query/src/: executor.py  few_shot.py  generator.py  kql_dsl.py  main.py  pii.py  repair.py  schema_linker.py  validator.py
query/tests/eval/: test_esr.py
query/tests/integration/: test_executor_es.py  test_main.py
query/tests/unit/: test_executor.py  test_few_shot.py  test_generator.py  test_init_qdrant.py  test_kql_dsl.py  test_metrics.py  test_pii.py  test_repair.py  test_schema_linker.py  test_validator.py
rag/: .env.example  Dockerfile  README.md  pyproject.toml
rag/prompts/: debate_agent.txt  debate_aggregator.txt
rag/scripts/: init_qdrant_rag.py
rag/src/: authority.py  conflict.py  debate.py  dense.py  fusion.py  ingest_service.py  main.py  preprocessor.py  qdrant_setup.py  reranker.py  settings.py  sparse.py  temporal.py
rag/src/connectors/: __init__.py  base.py  local_file.py
rag/tests/integration/: test_health.py  test_ingest.py  test_knowledge.py
rag/tests/unit/: test_authority.py  test_conflict.py  test_debate.py  test_dense.py  test_fusion.py  test_local_file_connector.py  test_preprocessor.py  test_qdrant_setup.py  test_reranker.py  test_settings.py  test_sparse.py  test_temporal.py
