[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nexgen-shared"
version = "0.1.0"
description = "Shared schemas, errors, and logging for NexGen services"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nexgen_shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
