[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nexgen-shared"
version = "0.1.0"
description = "Shared schemas, errors, and logging for NexGen services"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5",
    "structlog>=24.1",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.22.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.21.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nexgen_shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
